package org.example.exceptions;

public class InvalidRequestException {
}
