package org.example.facade;

import org.example.view.MainFrame;

public class AppFacade {

    private MainFrame mainFrame;

    public void start() {
        mainFrame = new MainFrame();
    }

    public void startNewGame() {
        // TODO
    }

    public void loadGame() {
        // TODO
    }

    public void saveGame() {
        // TODO
    }

    public void exitToMenu() {
        // TODO
    }
}