package org.example.model.entities;

public interface Entity {

    int getID();

    String getName();

    String getDescription();

}
