package org.example.model.entities.enums;

public enum WindowState {
    MENU,
    GAME
}