package org.example.util;

public class Event {
}
