package org.example.util;

public class SaveEvent extends Event {
}
