package org.example.util;

public class UIEvent extends Event {
}
